# wsrf_tools

./: .gitignore  CMakeLists.txt  LICENCE  README.C  README.git  README.perl  RelNotes
C/: CMakeLists.txt  Makefile  README  ReG_Steer_Tools.h  addUser.c  browseRegistry.c  configFileParser.c  configFileParser.h  createChkTree.c  createSWS.c  createSWSProxy.c  createVisSWS.c  destroySWS.c  getResourceProperty.c  getResourcePropertyDoc.c  globalParamCreate.c  securityUtils.c  securityUtils.h
C/conf/: tools.conf
CMake/: FindRealityGrid.cmake  RealityGridCheckFeatures.cmake
conf/: security.conf  tools.conf
perl/: Destroy.pl  Detach.pl  README  ReG_Utils.pm  addChkNode.pl  appLauncher.pl  container_addresses.txt  coupledAppLauncher.pl  createChkTree.pl  createReGFramework.pl  createRegistry.pl  createSWSResource.pl  destroyChkNode.pl  destroyChkTree.pl  getRegistryEntries.pl  getResourcePropertyDoc.pl  globalParamCreate.pl  ioproxy_addresses.txt  pruneChkTree.pl  reg_app_info.sh  reg_registry_info.sh  reg_viz_info.sh  testHarness.pl  visLauncher.pl  wsrf_ServiceGroupAdd.pl  wsrf_ServiceGroupAddContainer.pl  wsrf_ServiceGroupAddSG.pl  wsrf_ServiceGroupAddSWS.pl  wsrf_ServiceGroupAddSWSFactory.pl  wsrf_getResourceProperties.pl  wsrf_insertResourceProperty.pl  wsrf_updateResourceProperty.pl
